--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"> -->
   <!-- <link rel="stylesheet" href="styles/index.css"> -->
 
-  <title>шортрид_2_модуль_4</title>
+  <title>шортрид_волна_4</title>
 </head>
 <body class="page">
   <div class="page__container"> 
@@ -65,7 +65,106 @@
     </header>
 
 
-    <main class="main">    
+    <main class="main">
+      <div class="main__container">
+        <section class="promo-container promo">
+          <img src="images/teraflex_logo.png" alt="Терафлекс ультра" class="promo__brand-icon">
+          <div class="promo__title-container">
+            <h1 class="promo__title">
+              До хронизации один шаг:<br>
+            </h1>
+            <span class="promo__subtitle">окно возможностей для&nbsp;врача</span>
+          </div>
+          <div class="promo__img-container">
+            <img src="images/promo_img.png" alt="Остеоартрит позвоночника: картинка" class="promo__img">
+          </div>
+          
+        </section>
+
+        <section class="overview">
+          <h2 class="page__title page__title--h2">
+            Остеоартрит молодеет: изменения клинического профиля пациента
+          </h2>
+          <div class="overview__container">
+            <div class="overview__img-container">
+              <img src="./images/overview_img.png" alt="" class="overview__img">
+            </div>
+            <div class="overview__description">
+              <div class="overview__icon-container">
+                <img src="./images/men.png" alt="" class="overview__icon">
+              </div>
+              <p class="overview__text">
+                В группу риска сегодня входят не&nbsp;только пациенты пожилого возраста, <strong>но&nbsp;и&nbsp;лица молодого и&nbsp;среднего возраста</strong> с&nbsp;определёнными профессиональными или&nbsp;поведенческими нагрузками<sup>1</sup>:
+              </p>
+            </div>
+            <div class="overview__list">
+              <div class="overview__item">
+                <img src="./images/overview_list_img.png" alt="" class="overview__item-img">
+                <span class="overview__item-text">
+                  Пациенты, ведущие активный&nbsp;образ жизни
+                </span>
+              </div>
+              <div class="overview__item">
+                <img src="./images/overview_list_img.png" alt="" class="overview__item-img">
+                <span class="overview__item-text">
+                  Профессии с&nbsp;длительным пребыванием в&nbsp;вертикальном положении (к&nbsp;примеру, врачи, преподаватели)
+                </span>
+              </div>
+              <div class="overview__item">
+                <img src="./images/overview_list_img.png" alt="" class="overview__item-img">
+                <span class="overview__item-text">
+                  Женщины, носящие обувь на&nbsp;высоком каблуке
+                </span>
+              </div>
+              <div class="overview__item">
+                <img src="./images/overview_list_img.png" alt="" class="overview__item-img">
+                <span class="overview__item-text">
+                  Спортсмены с&nbsp;регулярной осевой нагрузкой
+                </span>
+              </div>
+            </div>
+
+          </div>
+          <div class="overview__nb">
+            <img src="./images/nb-img.png" alt="" class="overview__nb-img">
+            <p class="overview__nb-text">
+              <span class="overview__nb-span">Важно!</span><br>
+              При отсутствии рентгенологических изменений у&nbsp;молодых пациентов с&nbsp;болевым синдромом в&nbsp;спине необходимо учитывать ранние воспалительно-дегенеративные процессы, соответствующие концепции раннего OA. Именно в&nbsp;этот период у&nbsp;врача есть окно возможностей для&nbsp;патогенетического воздействия<sup>2</sup>.
+            </p>
+
+          </div>
+        </section>
+
+        <div class="page__block-separator">
+          <hr class="separator separator--right">
+        </div>
+
+        <section class="opportunities">
+          <h2 class="page__title page__title--h2">
+            Окно возможностей:<br> почему действовать нужно сейчас?<sup>2</sup>
+          </h2>
+          <div class="opportunities__scheme">
+            <img src="./images/opportunities_scheme_desk.png" alt="" class="opportunities__scheme-img">
+          </div>
+        </section>
+
+        <div class="approach">
+          <h2 class="page__title page__title--h2">
+            Современный подход к&nbsp;здоровью<br> суставов и&nbsp;позвоночника
+          </h2>
+          <p class="approach__description">
+            <span class="approach__description-margin">Фармаконутрицевтики — это&nbsp;новое поколение БАДов, которые содержат фармакологически активные вещества в&nbsp;комплексе с&nbsp;функциональными пищевыми ингредиентами<sup>3,4</sup>.</span><br>
+
+            Данная группа является рациональным выбором для&nbsp;пациентов с&nbsp;ранними проявлениями дегенеративных изменений и&nbsp;болевым синдромом.         
+          </p>
+        </div>
+
+        <div class="page__block-separator">
+          <hr class="separator separator--left">
+        </div>
+
+
+      </div>
 
      
     </main>
