--- a/src/index.html
+++ b/src/index.html
@@ -163,6 +163,88 @@
           <hr class="separator separator--left">
         </div>
 
+        <section class="tera-complex">
+          <h2 class="page__title page__title--h2 page__title--h2-uppercase">
+            Комплексное действие<br> Терафлекс<sup>&reg;</sup> Ультра<sup>5</sup>
+          </h2>
+          <div class="tera-complex__container">
+            <div class="tera-complex__item">
+              <img src="./images/tera-complex-img-01.png" alt="" class="tera-complex__item-img">
+              <span class="tera-complex__item-heading">
+                Комбинация хондроитина сульфата и&nbsp;глюкозамина
+              </span>
+              <span class="tera-complex__item-desc">
+                Способствует интенсивному восстановлению хрящевой ткани<sup>6</sup>
+              </span>
+
+            </div>
+            <div class="tera-complex__item">
+              <img src="./images/tera-complex-img-02.png" alt="" class="tera-complex__item-img">
+              <span class="tera-complex__item-heading">
+                Нативный коллаген II&nbsp;типа (НК-II)
+              </span>
+              <span class="tera-complex__item-desc">
+                Предупреждает дальнейшее разрушение коллагена хрящевой ткани и&nbsp;стимулирует восстановление сустава<sup>7</sup>
+              </span>
+
+            </div>
+            <div class="tera-complex__item">
+              <img src="./images/tera-complex-img-03.png" alt="" class="tera-complex__item-img">
+              <span class="tera-complex__item-heading">
+                Витамин C
+              </span>
+              <span class="tera-complex__item-desc">
+                Способствует синтезу коллагена и&nbsp;сохранению эластичности связок и&nbsp;сухожилий позвоночника<sup>8</sup>
+              </span>
+
+            </div>
+            <div class="tera-complex__item">
+              <img src="./images/tera-complex-img-04.png" alt="" class="tera-complex__item-img">
+              <span class="tera-complex__item-heading">
+                Витамины группы&nbsp;В
+              </span>
+              <span class="tera-complex__item-desc">
+                Усиливают действие глюкозамина и&nbsp;хондроитина на&nbsp;процессы восстановления<sup>10</sup>
+              </span>
+
+            </div>
+            <img src="./images/tera-complex-product.png" alt="" class="tera-complex__product">
+            <div class="tera-complex__item">
+              <img src="./images/tera-complex-img-05.png" alt="" class="tera-complex__item-img">
+              <span class="tera-complex__item-heading">
+                Гингерол
+              </span>
+              <span class="tera-complex__item-desc">
+                Обладает обезболиваюющим и&nbsp;противовоспалительным эффектом<sup>9</sup>
+              </span>
+
+            </div>
+          </div>
+
+          <div class="tera-complex__formula">
+            <p class="tera-complex__formula-text">
+              Такой состав делает <strong>Терафлекс<sup>&reg;</sup> Ультра</strong> рациональным выбором именно на&nbsp;этапе, когда&nbsp;врач может повлиять на&nbsp;прогрессирование заболевания — до&nbsp;появления необратимых морфологических изменений.
+            </p>
+            <img src="./images/tera-complex-docs.png" alt="" class="tera-complex__formula-img">
+
+          </div>
+
+        </section>
+
+        <div class="page__block-separator">
+          <hr class="separator separator--left">
+        </div>
+
+        <section class="tera-ultra">
+          <h2 class="page__title page__title--h2 page__title--h2-uppercase">
+            Терафлекс<sup>&reg;</sup> Ультра — 
+          </h2>
+          <span class="tera-ultra__subtitle">
+            За счет синергетического действия компонентов обеспечивает поддержку пациентов с&nbsp;ОА
+          </span>
+
+        </section>
+
 
       </div>
 
