--- a/src/index.html
+++ b/src/index.html
@@ -236,13 +236,71 @@
         </div>
 
         <section class="tera-ultra">
-          <h2 class="page__title page__title--h2 page__title--h2-uppercase">
-            Терафлекс<sup>&reg;</sup> Ультра — 
-          </h2>
-          <span class="tera-ultra__subtitle">
-            За счет синергетического действия компонентов обеспечивает поддержку пациентов с&nbsp;ОА
-          </span>
+          <div class="tera-ultra__title-container">
+            <h2 class="page__title page__title--h2 page__title--h2-uppercase">
+              Терафлекс<sup>&reg;</sup> Ультра — 
+            </h2>
+            <span class="tera-ultra__subtitle">
+              За счет синергетического действия компонентов обеспечивает поддержку пациентов с&nbsp;ОА
+            </span>
+          </div>
+          <div class="tera-ultra__list">
+            <span class="tera-ultra__list-heading">
+              Способствует:
+            </span>
+            <div class="tera-ultra__list-container">
+              <div class="tera-ultra__list-item">
+                <div class="tera-ultra__list-img-container">
+                  <img src="./images/tera-ultra-list-img-01.png" alt="" class="tera-ultra__list-img">
+                </div>
+                <span class="tera-ultra__list-text">
+                  Интенсивному восстановлению хрящевой ткани суставов
+                </span>
+              </div>
+              <div class="tera-ultra__list-item">
+                <div class="tera-ultra__list-img-container">
+                  <img src="./images/tera-ultra-list-img-02.png" alt="" class="tera-ultra__list-img">
+                </div>
+                <span class="tera-ultra__list-text">
+                  Обновлению собственного коллагена тканей суставов
+                </span>
+              </div>
+              <div class="tera-ultra__list-item">
+                <div class="tera-ultra__list-img-container">
+                  <img src="./images/tera-ultra-list-img-03.png" alt="" class="tera-ultra__list-img">
+                </div>
+                <span class="tera-ultra__list-text">
+                  Уменьшению чувства ноющей боли
+                </span>
+              </div>
+            </div>
 
+          </div>
+          <div class="tera-ultra__img-container">
+            <img src="./images/tera-ultra-product.png" alt="" class="tera-ultra__img">
+          </div>
+
+        </section>
+        
+        <section class="dosage">
+          <div class="dosage__block">
+            <div class="dosage__img-wrapper">
+              <img src="images/dosage_icon_pills.png" alt="Иконка" class="dosage__img">
+            </div>          
+            <span class="dosage__text">2 капсулы</span>
+          </div>
+          <div class="dosage__block">
+            <div class="dosage__img-wrapper">
+              <img src="images/dosage_icon_perday.png" alt="Иконка" class="dosage__img">
+            </div>          
+            <span class="dosage__text">2 раза в день</span>
+          </div>
+          <div class="dosage__block">
+            <div class="dosage__img-wrapper">
+              <img src="images/dosage_icon_perweek.png" alt="Иконка" class="dosage__img">
+            </div>          
+            <span class="dosage__text">не менее<br> 2 месяцев</span>
+          </div>
         </section>
 
 
