--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
               <div class="overview__icon-container">
                 <img src="./images/men.png" alt="" class="overview__icon">
               </div>
-              <p class="overview__text">
+              <p class="overview__text page__text-size--medium">
                 В группу риска сегодня входят не&nbsp;только пациенты пожилого возраста, <strong>но&nbsp;и&nbsp;лица молодого и&nbsp;среднего возраста</strong> с&nbsp;определёнными профессиональными или&nbsp;поведенческими нагрузками<sup>1</sup>:
               </p>
             </div>
@@ -127,8 +127,8 @@
           </div>
           <div class="overview__nb">
             <img src="./images/nb-img.png" alt="" class="overview__nb-img">
-            <p class="overview__nb-text">
-              <span class="overview__nb-span">Важно!</span><br>
+            <p class="overview__nb-text page__text-size--medium">
+              <span class="overview__nb-span page__text-size--medium">Важно!</span><br>
               При отсутствии рентгенологических изменений у&nbsp;молодых пациентов с&nbsp;болевым синдромом в&nbsp;спине необходимо учитывать ранние воспалительно-дегенеративные процессы, соответствующие концепции раннего OA. Именно в&nbsp;этот период у&nbsp;врача есть окно возможностей для&nbsp;патогенетического воздействия<sup>2</sup>.
             </p>
 
@@ -136,7 +136,8 @@
         </section>
 
         <div class="page__block-separator">
-          <hr class="separator separator--right">
+          <hr class="separator separator_desk separator--right ">
+          <hr class="separator separator_mob">
         </div>
 
         <section class="opportunities">
@@ -144,7 +145,8 @@
             Окно возможностей:<br> почему действовать нужно сейчас?<sup>2</sup>
           </h2>
           <div class="opportunities__scheme">
-            <img src="./images/opportunities_scheme_desk.png" alt="" class="opportunities__scheme-img">
+            <img src="./images/opportunities_scheme_desk.png" alt="" class="opportunities__scheme-img opportunities__scheme-img--desk">
+            <img src="./images/opportunities_scheme_mob.png" alt="" class="opportunities__scheme-img opportunities__scheme-img--mob">
           </div>
         </section>
 
@@ -152,15 +154,17 @@
           <h2 class="page__title page__title--h2">
             Современный подход к&nbsp;здоровью<br> суставов и&nbsp;позвоночника
           </h2>
-          <p class="approach__description">
-            <span class="approach__description-margin">Фармаконутрицевтики — это&nbsp;новое поколение БАДов, которые содержат фармакологически активные вещества в&nbsp;комплексе с&nbsp;функциональными пищевыми ингредиентами<sup>3,4</sup>.</span><br>
+          <p class="approach__description page__text-size--medium">
+            <span class="approach__description-margin page__text-size--medium">Фармаконутрицевтики — это&nbsp;новое поколение БАДов, которые содержат фармакологически активные вещества в&nbsp;комплексе с&nbsp;функциональными пищевыми ингредиентами<sup>3,4</sup>.</span><br>
 
             Данная группа является рациональным выбором для&nbsp;пациентов с&nbsp;ранними проявлениями дегенеративных изменений и&nbsp;болевым синдромом.         
           </p>
         </div>
 
         <div class="page__block-separator">
-          <hr class="separator separator--left">
+          <hr class="separator separator_desk separator--left">
+          <hr class="separator separator_mob">
+
         </div>
 
         <section class="tera-complex">
@@ -170,7 +174,7 @@
           <div class="tera-complex__container">
             <div class="tera-complex__item">
               <img src="./images/tera-complex-img-01.png" alt="" class="tera-complex__item-img">
-              <span class="tera-complex__item-heading">
+              <span class="tera-complex__item-heading page__text-size--medium">
                 Комбинация хондроитина сульфата и&nbsp;глюкозамина
               </span>
               <span class="tera-complex__item-desc">
@@ -180,7 +184,7 @@
             </div>
             <div class="tera-complex__item">
               <img src="./images/tera-complex-img-02.png" alt="" class="tera-complex__item-img">
-              <span class="tera-complex__item-heading">
+              <span class="tera-complex__item-heading page__text-size--medium">
                 Нативный коллаген II&nbsp;типа (НК-II)
               </span>
               <span class="tera-complex__item-desc">
@@ -190,7 +194,7 @@
             </div>
             <div class="tera-complex__item">
               <img src="./images/tera-complex-img-03.png" alt="" class="tera-complex__item-img">
-              <span class="tera-complex__item-heading">
+              <span class="tera-complex__item-heading page__text-size--medium">
                 Витамин C
               </span>
               <span class="tera-complex__item-desc">
@@ -200,7 +204,7 @@
             </div>
             <div class="tera-complex__item">
               <img src="./images/tera-complex-img-04.png" alt="" class="tera-complex__item-img">
-              <span class="tera-complex__item-heading">
+              <span class="tera-complex__item-heading page__text-size--medium">
                 Витамины группы&nbsp;В
               </span>
               <span class="tera-complex__item-desc">
@@ -211,7 +215,7 @@
             <img src="./images/tera-complex-product.png" alt="" class="tera-complex__product">
             <div class="tera-complex__item">
               <img src="./images/tera-complex-img-05.png" alt="" class="tera-complex__item-img">
-              <span class="tera-complex__item-heading">
+              <span class="tera-complex__item-heading page__text-size--medium">
                 Гингерол
               </span>
               <span class="tera-complex__item-desc">
@@ -231,11 +235,11 @@
 
         </section>
 
-        <div class="page__block-separator">
+        <!-- <div class="page__block-separator">
           <hr class="separator separator--left">
-        </div>
+        </div> -->
 
-        <section class="tera-ultra">
+        <!-- <section class="tera-ultra">
           <div class="tera-ultra__title-container">
             <h2 class="page__title page__title--h2 page__title--h2-uppercase">
               Терафлекс<sup>&reg;</sup> Ультра — 
@@ -280,9 +284,9 @@
             <img src="./images/tera-ultra-product.png" alt="" class="tera-ultra__img">
           </div>
 
-        </section>
+        </section> -->
         
-        <section class="dosage">
+        <!-- <section class="dosage">
           <div class="dosage__block">
             <div class="dosage__img-wrapper">
               <img src="images/dosage_icon_pills.png" alt="Иконка" class="dosage__img">
@@ -301,8 +305,52 @@
             </div>          
             <span class="dosage__text">не менее<br> 2 месяцев</span>
           </div>
-        </section>
+        </section> -->
 
+        <!-- <img src="images/remark.svg" alt="Иконка" class="page__remark"> -->
+
+        <!-- <section class="literature-list">
+          <h3 class="page__title page__title--h2 page__title--h2-uppercase">
+            Список сокращений<br> и литературы
+          </h3>
+          <p class="literature-list__note">
+            ОА — остеоартрит; МРТ — магнитно-резонансная томография; НПВП — нестероидные противовоспалительные препараты. 
+          </p>
+          <hr class="literature-list__separator">
+
+          <ol class="literature-list__items">
+            <li class="literature-list__item">
+              Waters T. R, Dick R. B. Evidence of health risks associated with prolonged standing at work and intervention effectiveness. Rehabil Nurs. 2015 May-Jun; 40(3): 148–65.
+            </li>
+            <li class="literature-list__item">
+              Im GI. The Concept of Early Osteoarthritis and Its Significance in Regenerative Medicine. Tissue Eng Regen Med. 2022 Jun;19(3):431-436. doi: 10.1007/s13770-022-00436-6. Epub 2022 Mar&nbsp;4. PMID: 35244885; PMCID: PMC9130436.
+            </li>
+            <li class="literature-list__item">
+              Харкевич Д.А. Фармакология. 10-е изд. М.: ГЭОТАР-Медиа, 2010. — 908 с.
+            </li>
+            <li class="literature-list__item">
+              Полуэктова Е.А., Беняшвили А.Г., Масленников Р.В. Нутрицевтики и “фармацевтики”. Российский журнал гастроэнтерологии, гепатологии, колопроктологии. 2020;30(2):68–75. DOI: 10.22416/1382-4376-2020-30-2-68-75.
+            </li>
+            <li class="literature-list__item">
+              Листок-вкладыш Ультра т.з. Терафлекс<sup>&reg;</sup> Биологически активная добавка к пище.
+            </li>
+            <li class="literature-list__item">
+              Lippiello L. Collagen Synthesis in tenocytes, ligament cells and chondrocytes exposed to a combination of Glucosamine HCland chondroitin sulfate. Evid Based Complement Alternat Med. 2007 Jun;4(2):219-24.
+            </li>
+            <li class="literature-list__item">
+              Дыдыкина И.С., Коваленко П.С., Коваленко А.А., Аболешина А.В. Значение неденатурированного коллагена для нормализации функции хрящевой ткани суставов. Медицинский совет. 2022;16(14):145–153.
+            </li>
+            <li class="literature-list__item">
+              Дыдыкина И. С., Коваленко П. С., Коваленко А. А., Аболешина А. В. Вклад микроэлементов и витамина С в комбинацию глюкозамина и хондроитина для обеспечения здоровья суставов при остеоартрите. РМЖ. 2022; 6: 52-56.
+            </li>
+            <li class="literature-list__item">
+              Haghighi M. et al. Comparing the Effects of ginger (Zingiber officinale) extract and ibuprofen On patients with osteoarthritis. Arch Iranian Med. 2005; 8(4): 267-271.
+            </li>
+            <li class="literature-list__item">
+              Kobayashi T. et al. Fursultiamine, a vitamin B1 derivative, enhances chondroprotective effects of glucosamine hydrochloride and chondroitin sulfate in rabbit experimental osteoarthritis. InflammRes. 2005; 54(6): 249-55.
+            </li>
+          </ol>
+        </section> -->
 
       </div>
 
@@ -324,7 +372,7 @@
           Тел.: <a href="tel:+74952311200" class="footer__tell-link">+7 (495) 231 1200</a>
         </p>
         <p class="footer__text">
-          CH-20250123-80
+          CH-20250604-66
         </p>
 
       </div>
